buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id "idea"
    id "eclipse"
    id "maven-publish"
    id 'net.neoforged.moddev.legacyforge' version '2.0.91'
    id 'com.diffplug.spotless' version '7.0.2'

    id "io.freefair.lombok" version '8.14'
}

sourceSets {
    main.resources {
        srcDir 'src/generated/resources'
    }
}

apply from: "./dependencies.gradle"
apply from: "./gradle/scripts/repositories.gradle"


version = mod_version
group = maven_group
base { archivesName = archives_base_name }
java { sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17 }

legacyForge {
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.mapping_version
        minecraftVersion = project.minecraft_version
    }

    runs {
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            //jvmArgument("-XX:+AllowEnhancedClassRedefinition")
            jvmArgument("-DnetworkTimeout=6000000")
            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
        client {
            client()
            sourceSet = sourceSets.main
            programArguments.addAll('--refresh-dependencies')
            systemProperty 'mixin.env.remapRefMap', 'true'
            // LegacyForge/ModDev generates the SRG-to-named mapping here.
            systemProperty 'mixin.env.refMapRemappingFile', file('build/moddev/artifacts/intermediateToNamed.srg').absolutePath
            systemProperty('forge.enabledGameTestNamespaces', project.mod_id)
        }
        server {
            server()
            sourceSet = sourceSets.main
            systemProperty('forge.enabledGameTestNamespaces', project.mod_id)
            programArguments.addAll('--nogui', '--world', 'world-extra')
        }
        data {
            data()
            sourceSet = sourceSets.main
            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll('--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath())
            programArguments.addAll('--existing-mod', 'gtceu')
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
        // merged Tinkers' Ponder mod (same jar)
        tponder {
            sourceSet(sourceSets.main)
        }
    }
}
jar {
    manifest.attributes([
        "MixinConfigs": "${mod_id}.mixins.json"
    ])
}


mixin {
    add sourceSets.main, "mixins.${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

//apply from: "$rootDir/gradle/scripts/spotless.gradle"
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.named('processResources', ProcessResources).configure {
    var properties = [
        "mod_license": mod_license,
        "modId": mod_id,
        "version": mod_version,
        "displayName": mod_name,
        "displayURL": mod_url,
        "authors": mod_author,
        "mod_description": mod_description,
        "formula_loader_range": formula_loader_range,
        "forge_version": forge_version.split("\\.")[0], // only specify major version of forge
        "minecraft_version": minecraft_version,
        "gtceu_version": gtceu_version,
        'loader_range': loader_range,
        'forge_range': forge_range,
        'minecraft_range': minecraft_range,
        'mantle_range': mantle_range,
        'emi_range': emi_range,
        'json_things_range': json_things_range,
        'tponder_version': tponder_version


    ]
    inputs.properties(properties)

    filesMatching("META-INF/mods.toml") {
        expand properties + [project: project]
    }
}

tasks.named('jar', Jar).configure { finalizedBy 'reobfJar' }

tasks.named('jarJar').configure {
    doLast {
        def metadataFile = outputDirectory.file('META-INF/jarjar/metadata.json').get().asFile
        def originalMetadata = metadataFile.getText('UTF-8')
        def updatedMetadata = originalMetadata.replaceFirst(/"isObfuscated"\s*:\s*false/, '"isObfuscated": true')
        if (updatedMetadata == originalMetadata) {
            throw new GradleException('Formula Loader JarJar metadata did not contain an obfuscation flag')
        }
        metadataFile.setText(updatedMetadata, 'UTF-8')
    }
}
tasks.withType(JavaCompile).configureEach {
    // ensure that the encoding is set to UTF-8, no matter what the system default is
    // this fixes some edge cases with special characters not displaying correctly
    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
    // If Javadoc is generated, this must be specified in that task too.
    options.encoding = "UTF-8"
    options.release.set(17)
    options.compilerArgs << "-Aquiet=true" // Suppress mixin notes
}

lombok {
    version = "1.18.38"
}
tasks.withType(Test).configureEach {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}
tasks.named('processTestResources', ProcessResources).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude 'bin/**'
}
sourceSets {
    test {
        java.srcDir 'src/test/java'
        resources.srcDir 'src/test/resources'
        compileClasspath += sourceSets.main.compileClasspath
        compileClasspath += sourceSets.main.runtimeClasspath
        runtimeClasspath += sourceSets.main.runtimeClasspath
    }
}
